<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nuri_wheelchair</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="ckdo@gmail.com">odroid</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nuri_bringup</exec_depend>
  <exec_depend>nuri_description</exec_depend>
  <exec_depend>nuri_interface</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
